# llm-toolkit

./: .gitignore  AGENTS.md  LLM_TOOLKIT.md  README.md  pyproject.toml
.agents/skills/rtk-codex/: SKILL.md
.codex/: hooks.json
.codex/hooks/: llm_toolkit_guard_hook.py
src/llm_toolkit/: __init__.py  caveman.py  cli.py  codeburn.py  codex_hooks.py  detect.py  doctor.py  envcheck.py  files.py  guard.py  rtk.py  stale.py  statusbar.py  workbench_app.py  workbench_config.py  workbench_launcher.py
src/llm_toolkit/prompts/: prompt_integrar_rtk_codex.txt
src/llm_toolkit/templates/: AGENTS_CAVEMAN_BLOCK.md  AGENTS_CODEBURN_BLOCK.md  AGENTS_RTK_BLOCK.md  CAVEMAN_SKILL.md  LLM_TOOLKIT.md
tests/: test_caveman.py  test_cli.py  test_codeburn.py  test_codex_hooks.py  test_detect.py  test_doctor.py  test_envcheck.py  test_files.py  test_guard.py  test_stale.py  test_statusbar.py  test_workbench_config.py  test_workbench_launcher.py
tools/: codex_rtk_env.ps1  workbench_entry.py
