[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-toolkit"
version = "0.3.0"
description = "CLI modular para preparar proyectos con Codex, RTK, Caveman, CodeBurn y Guard."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "perezemeca" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
gui = [
  "PySide6>=6.7",
]

[project.scripts]
llm-toolkit = "llm_toolkit.cli:app"
llm-toolkit-workbench = "llm_toolkit.workbench_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
